deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triviabot
  labels:
    app: triviabot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: triviabot
  template:
    metadata:
      labels:
        app: triviabot
    spec:
      containers:
      - name: triviabot
        image: grvcekim/triviabot:1.5
        ports:
          - containerPort: 8000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: triviabot
  labels:
    app: triviabot
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: triviabot
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: triviabot-ingress
spec:
  rules:
  - host: bee-travels-442dbba0442be6c8c50f31ed96b00601-0000.sjc04.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: triviabot
          servicePort: 8000
